Fixing the wrap

--- a/src/Components/Day.css
+++ b/src/Components/Day.css
@@ -1,7 +1,7 @@
  .card{
     background:no-repeat center center;
     background-size: cover;
-    width:  80px;
+    
     height: 80px;
     background-position: 50% 50%;
         
